--- a/index.htm
+++ b/index.htm
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="bmfw.css">
     <style>
         img {
-            width: 300px;
+            width: 220px;
             margin-left: 10px;
             border: dimgrey solid ;
             padding: 5px;
 
         }
         figcaption {
-            width: 300px;
+            width: 220px;
             text-align: center;
             margin-left: 10px;
         }
@@ -35,6 +35,13 @@
             </a>
             <figcaption>Elastic Collisions</figcaption>
         </figure>
+        <figure>
+            <a href="thevoid.html">
+                <img src="TheVoid.jpg" alt="Picture of the void">
+            </a>
+            <figcaption>The Void</figcaption>
+        </figure>
+
     </div>
 </body>
 </html>
