--- a/thevoid.html
+++ b/thevoid.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fast Gallery of P5*JS Sketches test</title>
+  <title>Fast Gallery of P5*JS Sketches</title>
   <link rel="stylesheet" href="bmfw.css">
   <script type="text/javascript" src="p5.min.js"></script>
   <script type="text/javascript" src="thevoid.js"></script>
